@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(HzToSemitones)
+export(addAM)
 export(addFormants)
 export(addVectors)
 export(analyze)
